# main_app/views/user_and_driver.py
@@ -3,8 +3,7 @@ from flask_login import login_required, current_user
 import phonenumbers
 
 from app import db
-from main_app.controller import validate_all, validate_params_with_schema, validate_is_in_db, \
-    validate_is_authorized_with_id
+from main_app.controller import validate_params_with_schema
 from main_app.model import User, Car
 from main_app.schemas import UserSchemaOrganizationInfo,\
     UserSchemaNoOrganizations, ChangePhoneSchema, \
@@ -22,15 +21,6 @@ def get_user_info():
     return jsonify(response), 200
 
 
-@api.route('/am_i_driver', methods=['GET'])
-@login_required
-def am_i_driver():
-    driver = db.session.query(Driver).filter_by(id=current_user.id).first()
-    if driver:
-        return jsonify(is_driver=True), 200
-    return jsonify(is_driver=False)
-
-
 def _get_user_info(user_id, include_organizations=True):
     if include_organizations:
         user_schema = UserSchemaOrganizationInfo()
@@ -38,25 +28,6 @@ def _get_user_info(user_id, include_organizations=True):
         user_schema = UserSchemaNoOrganizations()
     user = db.session.query(User).filter_by(id=user_id).first()
     return user_schema.dump(user)
-
-
-@api.route('/register_driver', methods=['POST'])
-@login_required
-def register_driver():
-    data = request.get_json()
-    user_id = data.get('id')
-    schema = RegisterDriverSchema()
-    errors = validate_all([
-        validate_params_with_schema(schema, data=data),
-        validate_is_in_db(db, user_id),
-        validate_is_authorized_with_id(user_id, current_user),
-    ])
-    if errors:
-        return errors
-    driver = Driver(**schema.dump(data))
-    db.session.add(driver)
-    db.session.commit()
-    return jsonify(user_id=driver.id), 200
 
 
 @api.route('/change_phone_number', methods=['POST', 'PATCH'])
